[feat] Parse blockquote - just need to add css for blockquote

--- a/packages/fb-arthur/src/assets/prismjs-theme.styl
+++ b/packages/fb-arthur/src/assets/prismjs-theme.styl
@@ -329,3 +329,14 @@ pre[class~=language-bash]:before {
 pre[class~=language-php]:before {
     content: "php"
 }
+
+blockquote  {
+  padding: .5em 1em;
+  background-color: #f8f8f8;
+  margin: 0;
+  border-left: 3px solid #5488c7;
+}
+
+blockquote > p {
+  margin: 0;
+}
